--- a/FindProperty/Views/Properties/Properties_Detail.cshtml
+++ b/FindProperty/Views/Properties/Properties_Detail.cshtml
@@ -156,4 +156,12 @@
         </div>
     </div>
 </div>
+@if (ViewBag.Message!= null)
+{
+    <script>
+     alert("@ViewBag.Message");
+
+    </script>
+}
+
 
