--- a/FindProperty/Views/Shared/_LoginPartial.cshtml
+++ b/FindProperty/Views/Shared/_LoginPartial.cshtml
@@ -25,12 +25,16 @@
                 <a id="manage" class="nav-link text-dark" asp-controller="Agents" asp-action="Index">Agents</a>
             </li>
         }
-        else if(UserManager.GetUserAsync(User).Result.role == "customer") { 
+        else if (UserManager.GetUserAsync(User).Result.role == "customer")
+        {
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Properties" asp-action="Search">Properties</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Appointments" asp-action="View_Appointment">Appointment</a>
+            </li>
         }
-        
+
 
 
     }
